--- a/biblio.bib
+++ b/biblio.bib
@@ -204,17 +204,6 @@
   publisher={Elsevier}
 }
 
-@article{hughes1968mean,
-  title={On the mean accuracy of statistical pattern recognizers},
-  author={Hughes, Gordon},
-  journal={IEEE transactions on information theory},
-  volume={14},
-  number={1},
-  pages={55--63},
-  year={1968},
-  publisher={IEEE}
-}
-
 @article{bouveyron2014model,
   title={Model-based clustering of high-dimensional data: A review},
   author={Bouveyron, Charles and Brunet-Saumard, Camille},
@@ -404,9 +393,6 @@ DOI = {10.3390/rs70912356}
    author = "Amari, Shun-ichi and Nagaoka, Hiroshi and Harada, Daishi",
    series = "Translations of mathematical monographs",
    publisher = "Providence, R.I. American Mathematical Society Oxford (Oxford University Press)",
-   url = "http://opac.inria.fr/record=b1097517",
-   isbn = "0-8218-0531-2",
-   note = "Traduit du japonais : (Jōhō kika no hōhō), édité par Iwanami Shoten en 1993",
    year = 2000
 }
 
@@ -445,3 +431,80 @@ DOI = {10.3390/rs70912356}
     abstract     = "Matrix identities, relations and approximations. A desktop reference for quick overview of mathematics of matrices."
 }
  
+@Article{rs1010001,
+AUTHOR = {Wagner, Wolfgang},
+TITLE = {A Better Understanding of Our Earth through Remote Sensing},
+JOURNAL = {Remote Sensing},
+VOLUME = {1},
+YEAR = {2009},
+NUMBER = {1},
+PAGES = {1},
+}
+
+
+@ARTICLE{hughes,
+    Author         = {G.F. Hughes},
+    Journal        = IEEE_J_IT,
+    Title          = {On the mean accuracy of statistical pattern recognizers},
+    Year           = {1968},
+    Volume         = {IT-14},
+    pages          = {55-63},
+    month          = {January}
+}
+
+@InProceedings{donoho,
+  author           = {D.L. Donoho},
+  title            = {High-dimensional data analysis: the curses and blessing of dimensionality},
+  booktitle        = {AMS Mathematical challenges of the 21st century},
+  year             = {2000},
+  
+}
+
+@BOOK{book:landgrebe,
+    Address        = {New Jersey},
+    Author         = {D.A. Landgrebe},
+    Publisher      = {John Wiley and Sons},
+    Title          = {Signal Theory Methods in Multispectral Remote Sensing},
+    Year           = {2003},
+    Language       = {English}
+}
+
+@Article{DR:guided:tour,
+  author =	 {Burges, C. J. C.},
+  title = 	 {Dimension Reduction: A Guided Tour},
+  journal = 	 {Foundations and Trends in Machine Learning},
+  year = 	 {2010},
+  volume = 	 {2},
+  number = 	 {4},
+  pages = 	 {275-365},
+}
+
+@ARTICLE{1396322,
+author={Ham, J. and Yangchi Chen and Crawford, M.M. and Ghosh, J.},
+journal=IEEE_J_GRS, 
+title={Investigation of the random forest framework for classification of hyperspectral data},
+year={2005},
+month=mar,
+volume={43},
+number={3},
+pages={ 492 - 501},
+}
+
+
+@ARTICLE{5411821,
+author={Ratle, F. and Camps-Valls, G. and Weston, J.},
+journal=IEEE_J_GRS, 
+title={Semisupervised Neural Networks for Efficient Hyperspectral Image Classification},
+year={2010},
+month= may,
+volume={48},
+number={5},
+pages={2271 -2282},
+}
+
+@Book{kernel:methods:rs,
+  editor = 	 {G. Camps-Valls and L. Bruzzone},
+  title = 	 {Kernel Methods for Remote Sensing Data Analysis},
+  publisher = 	 {Wiley},
+  year = 	 {2009},
+}
