--- a/biblio.bib
+++ b/biblio.bib
@@ -508,3 +508,16 @@ pages={2271 -2282},
   publisher = 	 {Wiley},
   year = 	 {2009},
 }
+
+@ARTICLE{1468090,
+author={S. De Backer and P. Kempeneers and W. Debruyn and P. Scheunders},
+journal={IEEE Geoscience and Remote Sensing Letters},
+title={A band selection technique for spectral classification},
+year={2005},
+volume={2},
+number={3},
+pages={319-323},
+keywords={image classification;vegetation mapping;band reduction technique;band selection technique;data interpretation;feature reduction;hyperspectral remote sensing;reflectance;sensor design;spectral classification;spectral resolution;statistical procedure;vegetation classification;Continuous wavelet transforms;Feature extraction;Hyperspectral imaging;Hyperspectral sensors;Optical sensors;Pattern classification;Reflectivity;Remote sensing;Vegetation;Wavelength measurement;Feature reduction;hyperspectral data;pattern classification},
+doi={10.1109/LGRS.2005.848511},
+ISSN={1545-598X},
+month={July},}
